# email_sim

./: .gitignore  README.md  cli.py  compose.yaml  dst.py  pyproject.toml  shell.nix  test_time_control.py
dst/: controller.py  generator.py  simulation.py  timecontrol.py
dst/actions/: __init__.py  email.py  time.py  user.py
dst/email_clients/: __init__.py  default_client.py  gmail.py  outlook.py
dst/generator/: __init__.py  email.py  user.py  user_manager.py
email_sim/: controller.py  simulation.py  timecontrol.py
email_sim/actions/: __init__.py  email.py  time.py  user.py
email_sim/email_clients/: __init__.py  default_client.py  gmail.py  outlook.py
email_sim/generator/: __init__.py  email.py  user.py  user_manager.py
exim/: Containerfile  receive.conf  send.conf
timeserver/: Containerfile  app.py
